--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,12 +81,13 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="T/F"
+        android:hint="@string/value"
         android:inputType="textCapCharacters"
         android:text="@string/Input1"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textSize="24sp"
+        android:digits="TF"
         app:layout_constraintBottom_toBottomOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="@+id/textView7"
         app:layout_constraintHorizontal_bias="0.0"
@@ -121,10 +122,11 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="T/F"
+        android:hint="@string/value"
         android:inputType="textCapCharacters"
         android:text="@string/Input1"
         android:textAlignment="center"
+        android:digits="TF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView11"
         app:layout_constraintEnd_toEndOf="@+id/inputRow1"
@@ -158,10 +160,10 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="T/F"
+        android:hint="@string/value"
         android:inputType="textCapCharacters"
         android:text="@string/Input1"
-
+        android:digits="TF"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView13"
@@ -197,11 +199,11 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="T/F"
+        android:hint="@string/value"
         android:inputType="textCapCharacters"
         android:text="@string/Input1"
         android:textAlignment="center"
-
+        android:digits="TF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView15"
         app:layout_constraintEnd_toEndOf="@+id/inputRow3"
